--- a/try.html
+++ b/try.html
@@ -137,7 +137,7 @@ body {
       <small> </small></td>
       <td width="100"><small> </small>
       <div style="background-color: rgb(255, 255, 255);" align="center"><small><strong><a
- href="lecturenotes.html"><small>Call for Short Talk</small><br>
+ href="lecturenotes.html"><small>Short Talks</small><br>
       </a></strong></small></div>
       <small> </small></td>
       <td width="90"><small> </small>
@@ -171,16 +171,16 @@ body {
  style="border-collapse: separate; color: rgb(0, 0, 0); font-family: 'Times New Roman'; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; font-size: medium;"><span
  class="Apple-style-span" style="">
  
- <h3><span style="color: rgb(255, 0, 0);">Drink Reception:</span><br>
+ <h3><span style="color: rgb(255, 0, 0);">Drinks Reception:</span><br>
       </h3>
      
-      <h3>There will be a drink reception for all participants on Monday 26 June on campus.</h3>
-      <h3><span style="color: rgb(255, 0, 0);">Dinner:</span><br>
+      <h3>There will be a drinks reception for all participants on Monday 26 June on campus.</h3>
+      <h3><span style="color: rgb(255, 0, 0);">Conference Dinner:</span><br>
       </h3>
 	  <u1><big>The dinner will be at your own expense (40 pounds per person).<br>
       </big></u1> 
       
-<h3> More information about all social events will be available soon. </h3>
+<h3> More information about these events will be available soon. </h3>
 
 <table
  style="width: 955px; height: 263px; text-align: left; margin-left: auto; margin-right: auto;"
