--- a/program.html
+++ b/program.html
@@ -187,7 +187,7 @@ body {
       <font style="color: rgb(0, 0, 0);" face="Verdana" size="2"><big><span
  lang="en-us"> </span><b> <a target="_blank"
  href="https://cage.ugent.be/~jat/"> <span
- style="text-decoration: none;">Jef Thas</span></a>: </b>
+ style="text-decoration: none;">Joseph Thas</span></a>: </b>
 </big></font>
 	      <br
  style="color: rgb(0, 0, 0);">
