--- a/participants.html
+++ b/participants.html
@@ -137,7 +137,7 @@ body {
       <small> </small></td>
       <td width="100"><small> </small>
       <div style="background-color: rgb(255, 255, 255);" align="center"><small><strong><a
- href="lecturenotes.html"><small>Call for Short Talk</small><br>
+ href="lecturenotes.html"><small>Short Talks</small><br>
       </a></strong></small></div>
       <small> </small></td>
       <td width="90"><small> </small>
