--- a/venue.html
+++ b/venue.html
@@ -137,7 +137,7 @@ body {
       <small> </small></td>
       <td width="100"><small> </small>
       <div style="background-color: rgb(255, 255, 255);" align="center"><small><strong><a
- href="lecturenotes.html"><small>Call for Short Talk</small><br>
+ href="lecturenotes.html"><small>Short Talks</small><br>
       </a></strong></small></div>
       <small> </small></td>
       <td width="90"><small> </small>
@@ -158,27 +158,9 @@ body {
   </tbody>
 </table>
 <span style="font-weight: bold;"></span><br>
-<br>
-<hr style="margin-left: auto; margin-right: auto;"> 
 
-<table
- style="width: 955px; height: 263px; text-align: left; margin-left: auto; margin-right: auto;"
- border="0">
-  <tbody>
-    <tr>
-<td style="width: 595px; background-color: rgb(255, 255, 255);"
- border="0"><span class="Apple-style-span"
- style="border-collapse: separate; color: rgb(0, 0, 0); font-family: 'Times New Roman'; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; font-size: medium;"><span
- class="Apple-style-span" style="">
-      <h3><span style="color: rgb(255, 0, 0);"> </span><br>
-      </h3>
-      
-      <!--
-      <ul>
-        <big>Lectures of the summer school will be given in the room 5C11 in Pevensey II at University of Sussex, Brighton, United Kingdom.<br>
-          </big>
-      </ul>  
--->
+<br>
+<hr style="margin-left: auto; margin-right: auto;">
 <table
  style="width: 955px; height: 263px; text-align: left; margin-left: auto; margin-right: auto;"
  border="0">
@@ -188,7 +170,8 @@ body {
  border="0"><span class="Apple-style-span"
  style="border-collapse: separate; color: rgb(0, 0, 0); font-family: 'Times New Roman'; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; font-size: medium;"><span
  class="Apple-style-span" style="">
- 
- <hr style="width: 100%; height: 2px;"><br>
-
+	      <h3><span style="color: rgb(0, 0, 0);">All talks will take place at Pevensey 1A6.</span><br>
+      </h3>
+	  <br></br> <br></br> <br></br>
+  <hr style="width: 100%; height: 2px;"><br>
 </html>
