--- a/index.html
+++ b/index.html
@@ -498,10 +498,10 @@ body {
          More information about the registration will be available soon.
       </ul>
 
-<!--<dd class="style2">To register follow the link: <a href="https://ftmakroglu05.github.io/Finite-Geometry-School/registration.html" target="_blank">
+<dd class="style2">To register follow the link: <a href="http://onlineshop.sussex.ac.uk/product-catalogue/conference-seminars/school-of-mathematical-and-physical-sciences/summer-school-on-finite-geometry-2017-registration-fee " target="_blank">
 Registration 
 
-</a></dd> -->
+</a></dd> 
 <br />
 <br />
 
