--- a/index.html
+++ b/index.html
@@ -158,7 +158,10 @@ body {
   </tbody>
   
 </table>
+<span style="font-weight: bold;"></span><br>
 
+<br>
+<hr style="margin-left: auto; margin-right: auto;">
 
 </style>
 </head>
