--- a/index.html
+++ b/index.html
@@ -222,7 +222,10 @@ body {
 
 <br />
 
+<span style="font-weight: bold;"></span><br>
 
+<br>
+<hr style="margin-left: auto; margin-right: auto;">
 
 <h2>Invited Speakers</h2>
 <dd class="style2">
