--- a/index.html
+++ b/index.html
@@ -509,10 +509,10 @@ body {
          Deadline for registration: Friday 12 May, 2017!
       </ul>
 	  
-<dd class="style2">To register follow the link: <a href="http://onlineshop.sussex.ac.uk/product-catalogue/conference-seminars/school-of-mathematical-and-physical-sciences/summer-school-on-finite-geometry-2017-registration-fee " target="_blank">
-Registration 
-
-</a></dd> 
+<p><font  size="3">******PLEASE 
+	MAKE YOUR PAYMENTS USING THE LINK BELOW ******</font></p>
+	<p><font size="5"><a href=" http://onlineshop.sussex.ac.uk/product-catalogue/conference-seminars/school-of-mathematical-and-physical-sciences/summer-school-on-finite-geometry-2017-registration-fee ">REGISTRATION</a></font></p>
+	
 <br />
 <br />
 
