--- a/registration.html
+++ b/registration.html
@@ -174,9 +174,9 @@ body {
 	       <h3><span style="color: rgb(255, 0, 0);">The deadline for registration is Friday 12 May, 2017.</span><br>
       </h3>
      
-      <h3>Please fill in the <a
+     <!-- <h3>Please fill in the <a
  href="RegistrationForm.pdf"><span style="color: rgb(0, 0, 255);">registration
-form</a> <span class="Apple-converted-space"> </span> and send it to fingeo@sussex.ac.uk</h3>
+form</a> <span class="Apple-converted-space"> </span> and send it to fingeo@sussex.ac.uk</h3> -->
       
       <ul>
         <li><big>The registration fee is 100 pounds. (Please note that the registration fee does not cover accommodation.)</big></li>
@@ -188,7 +188,10 @@ form</a> <span class="Apple-converted-space"> </span> and send it to fingeo@suss
       <ul>
         <li><big> To complete your registration you need to make your payments (registration fee + campus accommodation).</big></li>
       </ul>
-<h3> More information about payment will be available soon. </h3>
+<p><font  size="3">******PLEASE 
+	MAKE YOUR PAYMENTS USING THE LINK BELOW ******</font></p>
+	<p><font size="5"><a href=" http://onlineshop.sussex.ac.uk/product-catalogue/conference-seminars/school-of-mathematical-and-physical-sciences/summer-school-on-finite-geometry-2017-registration-fee ">REGISTRATION</a></font></p>
+	
 
 <table
  style="width: 955px; height: 263px; text-align: left; margin-left: auto; margin-right: auto;"
