--- a/hotelinfo.html
+++ b/hotelinfo.html
@@ -209,8 +209,9 @@ body {
 <br>
 
 <u1><big>
-We will make reservations for campus accommodation. You do not need to make any further arrangements if you want to stay on campus.</big></u1> 
- 
+We will make reservations for campus accommodation. You do not need to make any further arrangements if you register with on-campus accommodation.</big></u1> 
+
+<u1> <big> For all campus accommodation will be booked for check-in on 25th June and check-out on 30th June. </big> </u1>
  </br>
  </br>
 	 
