--- a/hotelinfo.html
+++ b/hotelinfo.html
@@ -211,8 +211,9 @@ body {
 <u1><big>
 We will make reservations for campus accommodation. You do not need to make any further arrangements if you register with on-campus accommodation.</big></u1> 
 </br>
-<u1> <big> For all campus accommodation will be booked for check-in on 25th June and check-out on 30th June. </big> </u1>
- </br>
+	</br>
+<u1> <big> All campus accommodation will be booked for check-in on 25th June and check-out on 30th June. </big> </u1>
+ <br></br>
  </br>
 	 
 	  <u1> <big> We will be offering single occupancy rooms only.</big> </u1> <br></br>
