--- a/index.html
+++ b/index.html
@@ -554,10 +554,14 @@ United Kingdom.</dd>
 
 
 <h2>Accommodation</h2>
+		
 
 <ul>
-       We will make reservations for campus accommodation. You do not need to make any further arrangements if you want to stay on campus. 
+       We will make reservations for campus accommodation. You do not need to make any further arrangements if you register with on-campus accommodation. 
       </ul>
+		
+<u1>  All campus accommodation will be booked for check-in on 25th June and check-out on 30th June. 
+		</u1>
 
  <ul>
         We will be offering single occupancy rooms only. 
