--- a/index.html
+++ b/index.html
@@ -560,8 +560,10 @@ United Kingdom.</dd>
        We will make reservations for campus accommodation. You do not need to make any further arrangements if you register with on-campus accommodation. 
       </ul>
 		
-<u1>  All campus accommodation will be booked for check-in on 25th June and check-out on 30th June. 
-		</u1>
+		<ul>
+       All campus accommodation will be booked for check-in on 25th June and check-out on 30th June. 
+      </ul>
+	
 
  <ul>
         We will be offering single occupancy rooms only. 
