--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ body {
 
 
 
-<h2>Organizing Committe</h2>
+<h2>Organising Committee</h2>
 
 <dd class="style2"><a href="http://www.maths.sussex.ac.uk/Staff/JWPH" target="_blank">James Hirschfeld</a> University of Sussex, Brighton, United Kingdom</dd>
 
@@ -281,7 +281,7 @@ body {
 <br />
 
 
-<h2>Program</h2>
+<h2>Programme</h2>
 <hr style="width: 100%; height: 2px;"><br>
 <table
  style="text-align: left; width: 956px; height: 32px; margin-left: auto; margin-right: auto;"
