--- a/index.html
+++ b/index.html
@@ -178,45 +178,18 @@ body {
   <tr>
     <td width="962">
     
-    <!-- <h1 align="center">İzmir Algebraic Geometric Topology Days II</h1>
-    <h2 align="center">09 - 14 January 2011</h2> 
-    
-    <p><div align="left" class="style4"> <a href="http://web.deu.edu.tr/math/IAGT/index.html">IAGT 2009</a>   &nbsp;&nbsp; <a href="http://web.deu.edu.tr/math/IAGT/IAGT2011.html">IAGT 2011</a></div></p>
-
--->
+ 
       <table width="964" border="0">
         <tr>
         <td width="660"><h2>Aims</h2>
 <ul> <li> To introduce some of the main concepts in Finite Geometry.</li> </ul>
-<ul><li> To increase the audiences knowledge of the many results and conjectures in Finite Geometry. </li> </ul>
+<ul><li> To increase the audience's knowledge of the many results and conjectures in Finite Geometry. </li> </ul>
 <ul><li> To provide an opportunity for PhD students to discuss and share their own projects.</li></ul>
 <ul><li> To enable mathematicians in this area to meet and plan scientiﬁc collaboration.</li></ul>
 
 <br />
 <br />
-<!--<h2>Scientific Committee</h2>
-<dd class="style2"><a href="http://math.gsu.edu.tr/uludag/" target="_blank">A. Muhammed Uludağ</a> (Galatasaray)</dd>
-<dd class="style2"><a href="http://www.fen.bilkent.edu.tr/~degt/" target="_blank">Alexander Degtyarev</a> (Bilkent)</dd>
-<dd class="style2"><a href="http://www.math.metu.edu.tr/~akisisel/" target="_blank">Ali Ulaş Özgür Kişisel</a> (METU NCC)</dd>
-<dd class="style2">Bedia Akyar Møller (Dokuz Eylül)</dd>
-<dd class="style2"><a href="http://portal.ku.edu.tr/~bozbagci/" target="_blank">Burak Özbağcı</a> (Koç)</dd>
-<dd class="style2"><a href="http://www.fen.bilkent.edu.tr/~yalcine/" target="_blank">Ergün Yalçın</a> (Bilkent)</dd>
-<dd class="style2"><a href="http://www.math.boun.edu.tr/instructors/ozturk/ozturk.htm" target="_blank">Ferit Öztürk</a> (Boğaziçi)</dd>
-<dd class="style2"><a href="http://home.imf.au.dk/dupont/" target="_blank">Johan L. Dupont</a> (Aarhus)</dd>
-<dd class="style2"><a href="http://www.gursey.gov.tr/~aker/" target="_blank">Kürşat Aker</a> (Feza Gürsey)</dd>
-<dd class="style2"><a href="http://www.math.metu.edu.tr/~korkmaz/" target="_blank">Mustafa Korkmaz</a> (METU)</dd>
-<dd class="style2"><a href="http://www.mth.msu.edu/~akbulut/" target="_blank">Selman Akbulut</a> (Michigan State)</dd>
-<dd class="style2"><a href="http://www.bilkent.edu.tr/~sertoz/ali.htm" target="_blank">Sinan Sertöz</a> (Bilkent)</dd>
-<dd class="style2"><a href="http://portal.ku.edu.tr/~tetgu/" target="_blank">Tolga Etgü</a> (Koç)</dd>
-<dd class="style2"><a href="http://www.math.metu.edu.tr/~turgut/index.html" target="_blank">Turgut Önder</a> (METU)</dd>
 
-
-
-          </td>
-          <td width="292"><a href="izmirsaatkulesi4Ocak2002.jpg" target="_blank"><img src="izmirsaatkulesi4Ocak2002.jpg" width="288" height="384" /></a></td>
-        </tr>
-      </table>
--->
 
 
 <br />
@@ -619,12 +592,7 @@ United Kingdom.</dd>
 
 
 
-<!--
 
-<h2>Poster</h2>
-<dd class="style2"><a href="http://web.deu.edu.tr/math/IAGT/IAGT2011afis.pdf" target="_blank">IAGT2011afis.pdf</a> / <a href="http://web.deu.edu.tr/math/IAGT/IAGT2011afis.jpg" target="_blank">IAGT2011afis.jpg</a> / <a href="http://web.deu.edu.tr/math/IAGT/IAGT2011afis.png" target="_blank">IAGT2011afis.png</a></dd>
-<br />
-<br /> -->
 
 <h2>Related Activities</h2>
 
