--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@ United Kingdom.</dd>
 <p> <a href="http://science.fau.edu/combinatorics/">48th Southeastern International Conference on Combinatorics</a>, Graph Theory & Computing, 6-10 March 2017, Boca Raton, FL, United States.</p>
 <p> <a href="http://www.dma.unina.it/Fq13/"> The 13th International Conference on Finite Fields and Their Applications</a>, 4 - 10 June 2017, Gaeta, Italy.</p>
 <p> <a href="http://combinatorics.cis.strath.ac.uk/bcc2017/">26th British Combinatorical Conference</a>, 3-7 July 2017, Glasgow, United Kingdom.</p>
-<p> <a href="http://cage.ugent.be/~ml/irsee5/irsee5.html/">Finite Geometries Fifth Irsee Conference</a>, 10-16 September 2017, Irsee, Germany.</p>
+<p> <a href="http://cage.ugent.be/~ml/irsee5/irsee5.html">Finite Geometries Fifth Irsee Conference</a>, 10-16 September 2017, Irsee, Germany.</p>
 
 
 
