--- a/hotelinfo.html
+++ b/hotelinfo.html
@@ -214,8 +214,9 @@ We will make reservations for campus accommodation. You do not need to make any 
 	</br>
 <u1> <big> All campus accommodation will be booked for check-in on 25th June and check-out on 30th June. </big> </u1>
  <br></br>
-	 
+	 <u1> <big> The price for campus accommodation is 120 pounds for 5 nights.</big> </u1> <br></br>
 	  <u1> <big> We will be offering single occupancy rooms only.</big> </u1> <br></br>
+	  	  
 	  <u1> <big>The rooms will be offered in Park Village and East Slope. </big></u1><br></br>
 	  
 <span
