--- a/index.html
+++ b/index.html
@@ -470,6 +470,9 @@ body {
 <ul>
         The registration fee is 100 pounds. (Please note that the registration fee does not cover accommodation.)
       </ul>
+		<ul>
+        The registration fee with on-campus accommodation is 220 pounds.
+      </ul>
       <ul>
         The registration fee includes the welcome reception and coffee break.<br>
           
