--- a/hotelinfo.html
+++ b/hotelinfo.html
@@ -167,7 +167,7 @@ body {
  border="0">
   <tbody>
     <tr>
-<td style="width: 595px; background-color: rgb(255, 255, 255);"
+ <td style="width: 595px; background-color: rgb(255, 255, 255);"
  border="0"><span class="Apple-style-span"
  style="border-collapse: separate; color: rgb(0, 0, 0); font-family: 'Times New Roman'; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; font-size: medium;"><span
  class="Apple-style-span" style="">
@@ -215,7 +215,7 @@ We will make reservations for campus accommodation. You do not need to make any 
 <u1> <big> All campus accommodation will be booked for check-in on 25th June and check-out on 30th June. </big> </u1>
  <br></br>
 	 <u1> <big> The price for campus accommodation is 120 pounds for 5 nights.</big> </u1> <br></br>
-	  <u1> <big> We will be offering single occupancy rooms only.</big> </u1> <br></br>
+	  <u1> <big> We will be offering single occupancy rooms only with shared bathroom.</big> </u1> <br></br>
 	  	  
 	  <u1> <big>The rooms will be offered in Park Village and East Slope. </big></u1><br></br>
 	  
