--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@ body {
          Deadline for registration: Friday 12 May, 2017!
       </ul>
 	  
-<p><font  size="3">******PLEASE 
+ <p><font  size="3">******PLEASE 
 	MAKE YOUR PAYMENTS USING THE LINK BELOW ******</font></p>
 	<p><font size="5"><a href=" http://onlineshop.sussex.ac.uk/product-catalogue/conference-seminars/school-of-mathematical-and-physical-sciences/summer-school-on-finite-geometry-2017-registration-fee ">REGISTRATION</a></font></p>
 	
@@ -542,7 +542,7 @@ United Kingdom.</dd>
 	
 
  <ul>
-        We will be offering single occupancy rooms only. 
+        We will be offering single occupancy rooms only with shared bathroom. 
       </ul>
 	  
 	  <ul>
