--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@ body {
 
 <h2>Contributed Talks</h2>
 <ul>
-        Research students are invited to give a 15 minute talk on their work.
+        Participants are invited to give a 15 minute talk on their work.
       </ul>
 	  
 	  <ul>Please write your abstract using our template <a href="abst.tex">
