--- a/lecturenotes.html
+++ b/lecturenotes.html
@@ -180,7 +180,7 @@ body {
  style="color: rgb(0, 0, 0);" face="Verdana" size="2"><br>
       <br>
       <br>
-Research students are invited to give a 15 minute talk on their work. 
+Participants are invited to give a 15 minute talk on their work. 
 		Please write your abstract using our template and email both <b>LaTeX </b> and <b>PDF</b> files to fingeo@sussex.ac.uk. 
 Please name the files and emails as <b>Surname_Firstname_Abstract</b>. 
 
