--- a/venue.html
+++ b/venue.html
@@ -172,6 +172,57 @@ body {
  class="Apple-style-span" style="">
 	      <h3><span style="color: rgb(0, 0, 0);">All talks will take place at Pevensey 1A6.</span><br>
       </h3>
-	  <br></br> <br></br> <br></br>
+	  <br></br> 
+	  <h1>How to get here</h1>            <p class="standfirst lead">With the South Downs on our doorstep, we're well-served by train, bus and road while cycling is also popular. We are nine minutes from Brighton, an hour from London and 30 minutes away from an international airport.</p>           
+ <p><img src="40548.jpg" alt="Aerial view of the University of Sussex campus" width="100%" /></p>
+<h2>Train</h2>
+<p>You can reach the University of Sussex directly from Brighton Station and Lewes Station.&nbsp;<a href="http://www.nationalrail.co.uk/stations/FMR.html">Falmer Station</a>&nbsp;is directly opposite the campus.&nbsp;You can walk to the campus from the station through a subway under the A27. Follow signs for the University of Sussex (the University of Brighton also has a campus at Falmer).</p>
+<p>You can get from Brighton to Falmer in nine minutes by train.&nbsp;Four trains an hour go to Falmer during the day.&nbsp;If you are travelling from London and the west, take a train to Brighton and change there for Falmer.</p>
+<p>The journey time from London to Brighton is just under an hour. You can also change at Lewes for Falmer, if you are coming from the east.</p>
+<p><a href="http://www.nationalrail.co.uk/">See National Rail Enquiries for train times</a>.</p>
+<hr />
+<h2>Car</h2>
+<p><a href="http://maps.google.co.uk/maps?q=university+of+sussex&amp;hl=en&amp;ll=50.862419,-0.080338&amp;spn=0.08473,0.222988&amp;sll=50.865128,-0.081882&amp;sspn=0.084725,0.222988&amp;z=13">The University is at Falmer on the A27 between Brighton and Lewes</a>, about four miles (six kilometres) from the centre of Brighton.</p>
+<p>Follow signs for the University of Sussex, which is on the north side of the A27. The University of Brighton also has a campus at Falmer, on the south side of the A27.</p>
+<p>If you are coming from London and the north, take the M23/A23 road towards Brighton.&nbsp;Before you enter Brighton, join the A27 eastbound signposting Lewes. If you're travelling from the east or west take the A27 direct to the University.</p>
+<h3>Parking on campus</h3>
+<p>Parking on campus is limited and there is normally a daily parking charge for visitors.&nbsp;This does not apply for open and admissions days or any visits arranged through the Student Recruitment Services Office.</p>
+<p>There is designated visitor parking, which is signposted on campus. Car parks are not attended and you should not leave objects of value in your vehicle.</p>
+
+<h2>Bus</h2>
+<p>The&nbsp;<a href="http://www.buses.co.uk/">23, 25, 25X, 28 and 29 buses</a>&nbsp;run between the centre of Brighton and the campus.</p>
+<p>The 25 buses run from Palmeira Square in Hove, through Churchill Square and the Old Steine in Brighton, into the campus.</p>
+<p>The 23 route runs from Brighton Marina in the east, through Hanover, into the campus.</p>
+<p>The 28 and 29 go from Churchill Square and stop outside the University campus.</p>
+<p>Some 5B (Hollingbury) and 50 (Hollingdean) buses also run to the campus.</p>
+<p>Travel time between the campus and Brighton is about 20 minutes.&nbsp;<a href="http://www.buses.co.uk/">See bus timetables and information</a>.</p>
+<hr />
+<h2>Bicycle</h2>
+<p>If you're a cyclist, you can benefit from purpose-built bike lanes along Lewes Road connecting the University to the centre of Brighton.</p>
+<p>It takes about 25 minutes to cycle to the campus and there is plenty of bike parking.</p>
+<hr />
+<h2>Taxi</h2>
+<p>Taxis are available at central taxi ranks and Brighton and Lewes train stations.</p>
+<p>The campus is about four miles (six kilometres) from central Brighton but it is often quicker to catch the train to Falmer from Brighton or Lewes.</p>
+<hr />
+<h2>Coach</h2>
+<p><a href="http://www.nationalexpress.com/coach/">National Express Coaches</a>&nbsp;to Brighton leave from London Victoria Coach Station and arrive at Pool Valley in the centre of the city.</p>
+<p>Services are every hour during the day and take about two hours.&nbsp;Coaches also run to Brighton from Gatwick and Heathrow airports.</p>
+<p>From Pool Valley, walk 100 metres to the Old Steine where you can catch a bus to the campus or take a taxi.</p>
+<hr />
+<h2>Plane</h2>
+<p>The closest airport to Brighton is <a href="http://www.gatwickairport.com/">London Gatwick</a>. Gatwick is 30 minutes by train to Brighton.</p>
+<p><a href="http://www.heathrowairport.com/">London Heathrow</a> is around two hours by coach.</p>
+<hr />
+
+<h2>Plan your route</h2>
+<form id="getdirections" class="style1 clear" action="http://maps.google.com/maps" method="get"><dl><dt></dt><dt><label for="frm-getdirections-address">Starting address (postcode, name of town...)</label></dt><dd><input id="frm-getdirections-address" name="saddr" type="text" /></dd><dd><input name="daddr" type="hidden" value="50.864012,-0.087248" /></dd><dd><input class="button" style="margin-top: 10px;" type="submit" value="Get directions" /></dd></dl>
+<p>Use Google maps or Bing maps to find routes to and from the campus. Both maps also give aerial views of the campus.</p>
+</form>
+<p><iframe frameborder="0" height="400" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5036.119577540691!2d-0.0922913664356498!3d50.86709286513646!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487588ca9b7c1b1b%3A0x7b4ba124cd6ad273!2sUniversity+of+Sussex!5e0!3m2!1sen!2suk!4v1465398688526" width="100%"></iframe></p>
+
+<hr />
+
+</ul>        </div>
   <hr style="width: 100%; height: 2px;"><br>
 </html>
