--- a/index-2.html
+++ b/index-2.html
@@ -192,7 +192,8 @@ body {
  style="color: rgb(0, 0, 0); font-family: Arial;" size="2"
  face="Verdana"><big style="font-weight: normal;"><font
  style="color: rgb(0, 0, 0);"> <!-- <a target="_blank"
- href="http://www.sussex.ac.uk/profiles/1242/"> --> <span
+ href="http://www.sussex.ac.uk/profiles/1242/"> -->  <span
+ style="text-decoration: none;"><a target="_blank" href="https://www.maths.sussex.ac.uk/Staff/JWPH/"> <span
  style="text-decoration: none;">James Hirschfeld</span></a></font> (University of Sussex , Brighton, UK) <span style="font-weight: bold;"></span><br>
       <a target="_blank" href="https://www.maths.sussex.ac.uk/Staff/JWPH/">  <span
  style="text-decoration: none;"><a target="_blank"
