--- a/index-2.html
+++ b/index-2.html
@@ -194,7 +194,11 @@ body {
  style="color: rgb(0, 0, 0);"> <!-- <a target="_blank"
  href="http://www.sussex.ac.uk/profiles/1242/"> -->  <span
  style="text-decoration: none;"><a target="_blank" href="https://www.maths.sussex.ac.uk/Staff/JWPH/"> <span
- style="text-decoration: none;">James Hirschfeld</span></a></font> (University of Sussex , Brighton, UK)  <span
+ style="text-decoration: none;">James Hirschfeld</span></a></font> (University of Sussex , Brighton, UK) 
+	    style="background-color: rgb(255, 255, 255); margin-left: 40px;"><font
+ style="color: rgb(0, 0, 0); font-family: Arial;" size="2"
+ face="Verdana"><big style="font-weight: normal;"><font
+ style="color: rgb(0, 0, 0);">   <span
  style="text-decoration: none;"><a target="_blank"
  href="https://ftmakroglu05.github.io/homepage/"> <span
  style="text-decoration: none;">Fatma Karaoglu</span></a> (University
