--- a/index-2.html
+++ b/index-2.html
@@ -195,8 +195,9 @@ body {
  href="http://www.sussex.ac.uk/profiles/1242/"> -->  <span
  style="text-decoration: none;"><a target="_blank" href="https://www.maths.sussex.ac.uk/Staff/JWPH/"> <span
  style="text-decoration: none;">James Hirschfeld</span></a></font> (University of Sussex , Brighton, UK) 
-	    <font
- style="color: rgb(0, 0, 0);">   <span
+	    <br style="color: rgb(0, 0, 0);">
+      <big style="color: rgb(0, 0, 0);"><font
+ style="font-family: Arial;" size="2" face="Verdana">  <span
  style="text-decoration: none;"><a target="_blank"
  href="https://ftmakroglu05.github.io/homepage/"> <span
  style="text-decoration: none;">Fatma Karaoglu</span></a> (University
