--- a/index-2.html
+++ b/index-2.html
@@ -197,7 +197,8 @@ body {
  style="text-decoration: none;">James Hirschfeld</span></a></font> (University of Sussex , Brighton, UK) 
 	    <br style="color: rgb(0, 0, 0);">
       <big style="color: rgb(0, 0, 0);"><font
- style="font-family: Arial;" size="2" face="Verdana">  <span
+ style="font-family: Arial;" size="2" face="Verdana"> <big style="font-weight: normal;"><font
+ style="color: rgb(0, 0, 0);">  <span
  style="text-decoration: none;"><a target="_blank"
  href="https://ftmakroglu05.github.io/homepage/"> <span
  style="text-decoration: none;">Fatma Karaoglu</span></a> (University
