--- a/hotelinfo.html
+++ b/hotelinfo.html
@@ -239,10 +239,10 @@ Here are some suggestions:</u1></big>
         <li><big> <span
  style="text-decoration: none;"><a target="_blank"
  href="http://www.sussex.ac.uk/aboutus/findus/wheretostay/toprange"> <span
- style="text-decoration: none;">Top Range Hotels</span></a>  
+ style="text-decoration: none;">Where to stay</span></a>  
           </big></li>
       </ul>
-      <ul>
+     <!-- <ul>
         <li><big> <span style="text-decoration: none;"><a target="_blank"
  href=" http://www.sussex.ac.uk/aboutus/findus/wheretostay/midrange"> <span
  style="text-decoration: none;">Mid Range Hotels</span></a> </big></li>
@@ -261,7 +261,7 @@ Here are some suggestions:</u1></big>
         <li><big>    <span style="text-decoration: none;"><a target="_blank"
  href=" http://www.sussex.ac.uk/aboutus/findus/wheretostay/selfcatering"> <span
  style="text-decoration: none;">Self-catering Holiday apartments</span></a>   </big></li>
-      </ul>
+      </ul> -->
       </br> </br>
 	   
       <br> </br> <br>
