--- a/hotelinfo.html
+++ b/hotelinfo.html
@@ -233,14 +233,14 @@ We will make reservations for campus accommodation. You do not need to make any 
 	  <u1><big>
 You can always make your own reservation if you would like to stay in town.</u1></big> 
 <u1><big>
-Here are some suggestions:</u1></big> 
+Please see the link below for some suggestions:</u1></big> 
 
 <ul>
-        <li><big> <span
+        <big> <span
  style="text-decoration: none;"><a target="_blank"
  href="http://www.sussex.ac.uk/aboutus/findus/wheretostay/toprange"> <span
  style="text-decoration: none;">Where to stay</span></a>  
-          </big></li>
+          </big>
       </ul>
      <!-- <ul>
         <li><big> <span style="text-decoration: none;"><a target="_blank"
