--- a/hotelinfo.html
+++ b/hotelinfo.html
@@ -218,9 +218,9 @@ We will make reservations for campus accommodation. You do not need to make any 
 	  <u1> <big> We will be offering single occupancy rooms only with shared bathroom.</big> </u1> <br></br>
 	  	  
 	  <u1> <big>The rooms will be offered in Park Village and East Slope. </big></u1><br></br>
-	  
+<!--	  
 <span
- style="text-decoration: none;"> <!--<a target="_blank"
+ style="text-decoration: none;"> <a target="_blank"
  href="http://www.sussex.ac.uk/study/accommodation/on-campus"> <span
  style="text-decoration: none;">Find out more about on-campus accommodation</span></a> --> <br>
 
