--- a/index.html
+++ b/index.html
@@ -566,18 +566,18 @@ United Kingdom.</dd>
       
 	  
 <ul>
-        You can always make your own reservation if you would like to stay in town. Here are some suggestions:
+        You can always make your own reservation if you would like to stay in town. Please see some suggestions:
       </ul>
 
 
 <ul>
-        <li><span
+       <span
  style="text-decoration: none;"><a target="_blank"
  href="http://www.sussex.ac.uk/aboutus/findus/wheretostay/toprange"> <span
  style="text-decoration: none;">Top Range Hotels</span></a>  
-          </li>
+          
       </ul>
-      <ul>
+     <!-- <ul>
         <li> <span style="text-decoration: none;"><a target="_blank"
  href=" http://www.sussex.ac.uk/aboutus/findus/wheretostay/midrange"> <span
  style="text-decoration: none;">Mid Range Hotels</span></a> </li>
@@ -596,7 +596,7 @@ United Kingdom.</dd>
         <li>   <span style="text-decoration: none;"><a target="_blank"
  href=" http://www.sussex.ac.uk/aboutus/findus/wheretostay/selfcatering"> <span
  style="text-decoration: none;">Self-catering Holiday apartments</span></a>   </li>
-      </ul>
+      </ul> -->
 
 <br />
 <br />
