--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@ United Kingdom.</dd>
        <span
  style="text-decoration: none;"><a target="_blank"
  href="http://www.sussex.ac.uk/aboutus/findus/wheretostay/toprange"> <span
- style="text-decoration: none;">Top Range Hotels</span></a>  
+ style="text-decoration: none;">Where to stay</span></a>  
           
       </ul>
      <!-- <ul>
