--- a/registration.html
+++ b/registration.html
@@ -182,7 +182,7 @@ form</a> <span class="Apple-converted-space"> </span> and send it to fingeo@suss
         <li><big>The registration fee is 100 pounds. (Please note that the registration fee does not cover accommodation.)</big></li>
       </ul>
       <ul>
-        <li><big>The registration fee includes the welcome reception and coffee break.<br>
+        <li><big>The registration fee includes the welcome reception and coffee breaks.<br>
           </big></li>
       </ul>
       <ul>
