--- a/participants.html
+++ b/participants.html
@@ -237,6 +237,10 @@ body {
       </big></u1> 
 	  <u1><big>25- Maria Montanucci, Università degli studi della Basilicata, Potenza, Italy <br>
       </big></u1> 
+	  <br>
+	   </big></u1> 
+	  <u1><big>26- Michael Reynolds , The University of New South Wales, Sydney, Australia <br>
+      </big></u1> 
 	  <br></br> <br></br> <br></br>
   <hr style="width: 100%; height: 2px;"><br>
 </html>
