--- a/hotelinfo.html
+++ b/hotelinfo.html
@@ -217,7 +217,7 @@ We will make reservations for campus accommodation. You do not need to make any 
 	 <u1> <big> The price for campus accommodation is 120 pounds for 5 nights.</big> </u1> <br></br>
 	  <u1> <big> We will be offering single occupancy rooms only with shared bathroom.</big> </u1> <br></br>
 	  	  
-	  <u1> <big>The rooms will be offered in Park Village and East Slope. </big></u1><br></br>
+	  <u1> <big>The rooms will be offered in Park Village. </big></u1><br></br>
 <!--	  
 <span
  style="text-decoration: none;"> <a target="_blank"
