--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@ United Kingdom.</dd>
       </ul>
 	  
 	  <ul>
-        The rooms will be offered in Park Village and East Slope. 
+        The rooms will be offered in Park Village. 
       </ul>
 	  
 	    	  
