--- a/participants.html
+++ b/participants.html
@@ -140,8 +140,7 @@ body {
  href="lecturenotes.html"><small>Short Talks</small><br>
       </a></strong></small></div>
       <small> </small></td>
-      <td width="90"><small> </small>
-      <div style="background-color: rgb(255, 255, 255);" align="center"><small><strong><a
+      <td width="90"><small> </small>      <div style="background-color: rgb(255, 255, 255);" align="center"><small><strong><a
  href="venue.html">Venue</a></strong></small></div>
       <small> </small></td>
       <td width="90"><small> </small>
@@ -193,7 +192,7 @@ body {
 
 <br>
       </big></u1> 
-	  <u1><big>-8 Christopher Jefferson, University of St Andrews, St Andrews, Scotland<br>
+	  <u1><big>8- Christopher Jefferson, University of St Andrews, St Andrews, Scotland<br>
       </big></u1> 
 	      	  <u1><big>9- Awss Al-ogaidi, University of Sussex, Brighton, England<br>
       </big></u1> 
