--- a/participants.html
+++ b/participants.html
@@ -182,7 +182,7 @@ body {
 	  <u1><big>5- Simeon Ball, Polytechnic University of Catalonia, Barcelona, Spain 
 <br>
       </big></u1> 
-1	      <u1><big>6- Anton Betten, Colorado State University, Fort Collins, Colorado, USA 
+	      <u1><big>6- Anton Betten, Colorado State University, Fort Collins, Colorado, USA 
 
 
 <br>
