--- a/participants.html
+++ b/participants.html
@@ -245,6 +245,10 @@ body {
 	   </big></u1> 
 	  <u1><big>27- Michael Reynolds , The University of New South Wales, Sydney, Australia <br>
       </big></u1> 
+	      <u1><big>28- Sandra Kingan, Brooklyn College, Brooklyn, New York, USA <br>
+      </big></u1> 
+	      u1><big>29- Daniel Heinlein, University of Bayreuth, Bayreuth, Germany <br>
+      </big></u1> 
 	  <br></br> <br></br> <br></br>
   <hr style="width: 100%; height: 2px;"><br>
 </html>
