--- a/participants.html
+++ b/participants.html
@@ -196,7 +196,7 @@ body {
       </big></u1> 
 	      	  <u1><big>9- Awss Al-ogaidi, University of Sussex, Brighton, England<br>
       </big></u1> 
-	  <u1><big>10- James Davis, University of Richmond, Richmond, Virginia, USA
+ 	  <u1><big>10- James Davis, University of Richmond, Richmond, Virginia, USA
 <br>
       </big></u1> 
 	  
@@ -249,7 +249,7 @@ body {
       </big></u1> 
 	     <u1><big>29- Daniel Heinlein, University of Bayreuth, Bayreuth, Germany <br>
       </big></u1> 
-      <u1><big>30-  Jesse Lansdown , RWTH Aachen University, Aachen, Germany <br>
+      <u1><big>30-  Jesse Lansdown , RWTH Aachen University, Aachen, North Rhine-Westphalia, Germany <br>
       </big></u1> 
 	  <br></br> <br></br> <br></br>
   <hr style="width: 100%; height: 2px;"><br>
