--- a/try.html
+++ b/try.html
@@ -171,16 +171,32 @@ body {
  style="border-collapse: separate; color: rgb(0, 0, 0); font-family: 'Times New Roman'; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; font-size: medium;"><span
  class="Apple-style-span" style="">
  
- <h3><span style="color: rgb(255, 0, 0);">Drinks Reception:</span><br>
+ <h3><span style="color: rgb(255, 0, 0);">Monday 26 June:</span><br> Drinks Reception
       </h3>
+     <u1><li><big>There will be a drinks reception at 17:30 for all participants in the foyer of Pevensey II.<br>
+      </big></li></u1> 
+	  
+      <h3><span style="color: rgb(255, 0, 0);">Tuesday 27 June:</span><br> BBQ on the Beach
+      </h3>
+     <u1><li><big>There will be a barbecue party for all participants on the beach at Hove.<br>
+      </big></li></u1> 
+	  	  <u1><li><big>Meeting point is the bus stop at Palmeira Square at 19:00.<br>
+      </big></li></u1>
+	   <u1><li><big>Bus from University is 25 or 25X.<br>
+      </big></li></u1>
+	  <h3><span style="color: rgb(255, 0, 0);">Thursday 29 June:</span><br> Conference Dinner
+      </h3>
+	  <u1><li><big>The dinner will be at FishMekan, 64 Western Road, Hove BN3 2JQ at 19:00.<br>
+      </big></li></u1>
+	  <u1><li><big>It is at Palmeira Square.<br>
+      </big></li></u1>
+	  <u1><li><big>Menu:</li> wine and beer, choice of starter, main course and dessert.<br>
+      </big></u1>
+	  
      
-      <h3>There will be a drinks reception for all participants on Monday 26 June on campus.</h3>
-      <h3><span style="color: rgb(255, 0, 0);">Conference Dinner:</span><br>
-      </h3>
-	  <u1><big>The dinner will be at your own expense (40 pounds per person).<br>
-      </big></u1> 
+	  
       
-<h3> More information about these events will be available soon. </h3>
+<!--<h3> More information about these events will be available soon. </h3>-->
 
 <table
  style="width: 955px; height: 263px; text-align: left; margin-left: auto; margin-right: auto;"
