--- a/program.html
+++ b/program.html
@@ -260,7 +260,7 @@ NOTES</big></a> --> </i></b></big></font></span><br
         <tbody>
           <tr valign="bottom">
             <td colspan="8" align="center" valign="middle"><font
- size="3"><b><big> TENTATIVE SCHEDULE </big></b></font></td>
+ size="3"><b><big> SCHEDULE </big></b></font></td>
             
           </tr>
           <tr valign="bottom">
