--- a/index.html
+++ b/index.html
@@ -624,6 +624,7 @@ United Kingdom.</dd>
 <h2>Sponsors</h2>
 <dd> <a href="http://www.sussex.ac.uk/study/phd/doctoral" target="_blank"><img src="ds-flint.jpg" width="200" height="150" /></a> &nbsp;&nbsp; 
      <a href="http://www.ima.org.uk/" target="_blank"><img src="ima_logo_new.jpg" width="150" height="150" /></a> &nbsp;&nbsp; 
+     <a href="https://britishcombinatorial.wordpress.com/" target="_blank"><img src="bcc.jpg" width="150" height="150" /></a> &nbsp;&nbsp; 
      </dd>
 </td>
 </tr>
