--- a/hotelinfo.html
+++ b/hotelinfo.html
@@ -68,7 +68,7 @@ body {
 	<!--
 		@page { size: 8.5in 11in; margin: 0.79in }
 		P { margin-bottom: 0.08in }
-	-->
+3	-->
 	</style>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 </head>
@@ -78,7 +78,7 @@ body {
 <table style="text-align: left; margin-left: auto; margin-right: auto;"
  border="1" width="955">
   <tbody>
-    <tr>
+   <tr>
       <td style="background-color: rgb(255, 255, 255);" width="87">
       <p align="center"><a
  href="http://www.sussex.ac.uk/study/phd/doctoral" target="_blank"><img
@@ -95,7 +95,8 @@ body {
       </h1>
       
       <h2 style="font-family: Arial;">26 - 30 June 2017, Brighton, UK </h2>
-      <table style="text-align: left; width: 554px; height: 60px;"
+      <a href="https://britishcombinatorial.wordpress.com/" target="_blank"> <img src="BCClogo.png" > </a>
+      <table style="text-align: left; width: 554px; height: 30px;"
  border="0" cellpadding="2" cellspacing="2">
         
       </table>
