--- a/index-2.html
+++ b/index-2.html
@@ -76,6 +76,7 @@ body {
 <body
  style="background-image: url(figs/waves7.jpg); color: rgb(0, 0, 0); background-color: rgb(255, 255, 255);"
  alink="#ee0000" vlink="#551a8b" link="#0000ee">
+
 <table style="text-align: left; margin-left: auto; margin-right: auto;"
  border="1" width="955">
   <tbody>
@@ -96,7 +97,8 @@ body {
       </h1>
       
       <h2 style="font-family: Arial;">26 - 30 June 2017, Brighton, UK </h2>
-      <table style="text-align: left; width: 554px; height: 60px;"
+      <a href="https://britishcombinatorial.wordpress.com/" target="_blank"> <img src="BCClogo.png" > </a>
+      <table style="text-align: left; width: 554px; height: 30px;"
  border="0" cellpadding="2" cellspacing="2">
         
       </table>
