--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@ body {
       </h1>
       
       <h2 style="font-family: Arial;">26 - 30 June 2017, Brighton, UK </h2>
-      <table style="text-align: left; width: 554px; height: 60px;"
+      <a href="https://britishcombinatorial.wordpress.com/" target="_blank"> <img src="BCClogo.png" > </a>
+      <table style="text-align: left; width: 554px; height: 30px;"
  border="0" cellpadding="2" cellspacing="2">
         
       </table>
