--- a/lecturenotes.html
+++ b/lecturenotes.html
@@ -81,7 +81,7 @@ body {
     <tr>
       <td style="background-color: rgb(255, 255, 255);" width="87">
       <p align="center"><a
- href="http://www.sussex.ac.uk/study/phd/doctoral" target="_blank"><img
+3 href="http://www.sussex.ac.uk/study/phd/doctoral" target="_blank"><img
  alt="University of Sussex Mathematics Department" title="School of Mathematical Science"
  src="ds-flint.jpg"
  style="border: 0px solid ; width: 261px; height: 150px;"></a><br>
@@ -95,7 +95,8 @@ body {
       </h1>
       
       <h2 style="font-family: Arial;">26 - 30 June 2017, Brighton, UK </h2>
-      <table style="text-align: left; width: 554px; height: 60px;"
+      <a href="https://britishcombinatorial.wordpress.com/" target="_blank"> <img src="BCClogo.png" > </a>
+      <table style="text-align: left; width: 554px; height: 30px;"
  border="0" cellpadding="2" cellspacing="2">
         
       </table>
