--- a/program.html
+++ b/program.html
@@ -158,7 +158,7 @@ body {
 
   <tbody>
 
-    <tr>
+<a href="https://britishcombinatorial.wordpress.com/" target="_blank"> <img src="BCClogo.png" > </a>    <tr>
 
       <td style="background-color: rgb(255, 255, 255);" width="87">
 
@@ -191,8 +191,8 @@ body {
       
 
       <h2 style="font-family: Arial;">26 - 30 June 2017, Brighton, UK </h2>
-
-      <table style="text-align: left; width: 554px; height: 60px;"
+<a href="https://britishcombinatorial.wordpress.com/" target="_blank"> <img src="BCClogo.png" > </a>
+      <table style="text-align: left; width: 554px; height: 30px;"
 
  border="0" cellpadding="2" cellspacing="2">
 
