--- a/participants.html
+++ b/participants.html
@@ -249,8 +249,10 @@ body {
       </big></u1> 
 	     <u1><big>28- Daniel Heinlein, University of Bayreuth, Bayreuth, Germany <br>
       </big></u1> 
-      <u1><big>29-  Jesse Lansdown , RWTH Aachen University, Aachen, North Rhine-Westphalia, Germany <br>
+      <u1><big>29- Jesse Lansdown , RWTH Aachen University, Aachen, North Rhine-Westphalia, Germany <br>
       </big></u1> 
+	      <u1><big>30- Michel Lavrauw, Università di Padova & Sabanci University, Padua-Italy & Istanbul, Turkey <br>
+      </big></u1>   
 	  <br></br> <br></br> <br></br>
   <hr style="width: 100%; height: 2px;"><br>
 </html>
