--- a/participants.html
+++ b/participants.html
@@ -220,7 +220,7 @@ body {
 
 <br>
       </big></u1> 
-	  <u1><big>18- Duy Ho, University of Canterbury, Canterbury, England<br>
+	  <u1><big>18- Duy Ho, University of Canterbury, Canterbury, New Zealand<br>
       </big></u1> 
 	  <u1><big>19- Mohammed Hazzazi, University of Sussex, Brighton, England<br>
       </big></u1> 
