--- a/try.html
+++ b/try.html
@@ -194,8 +194,10 @@ body {
       </big></li></u1>
 	  <u1><li><big>Menu:</li> wine and beer, choice of starter, main course and dessert.<br>
       </big></u1>
-	  
-     
+	  <u1><li><big>Please use the link below if you like to purchase the conference dinner.  <br>
+      </big></u1>
+     	<p><font size="5"><a href=" http://onlineshop.sussex.ac.uk/product-catalogue/conference-seminars/school-of-mathematical-and-physical-sciences/summer-school-on-finite-geometry-2017-registration-fee ">Conference Dinner</a></font></p>
+	
 	  
       
 <!--<h3> More information about these events will be available soon. </h3>-->
