--- a/index.html
+++ b/index.html
@@ -179,6 +179,19 @@ body {
   <tr>
     <td width="962">
     
+	<br
+
+ style="color: rgb(0, 0, 0);">
+
+	      <a href="Fin_Geo_Brighton.jpg">
+
+                Conference Photo
+
+              </a>
+	      
+		  <br></br>
+
+	
  
       <table width="964" border="0">
         <tr>
